--- a/index.html
+++ b/index.html
@@ -3,249 +3,144 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>One Quarter Enterprises LLC | 7 Chapters to 7 Figures</title>
+<title>ONE QUARTER EQUALS A D$LLAR</title>
 <!-- Load Tailwind CSS -->
 <script src="https://cdn.tailwindcss.com"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 <style>
-/* Define custom Tailwind configuration */
-tailwind.config = {
-theme: {
-extend: {
-colors: {
-'primary-dark': '#060E1B', /* Deep Navy/Indigo based on the book cover */
-'accent-gold': '#D4AF37', /* Classic Gold */
-'light-gold': '#FFD700',
-'text-light': '#E5E7EB',
-},
-fontFamily: {
-sans: ['Inter', 'sans-serif'],
-serif: ['Georgia', 'serif'], /* Used for the main titles */
-},
-boxShadow: {
-'gold-glow': '0 0 15px rgba(212, 175, 55, 0.7)',
+/* Set a custom font family */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+body {
+font-family: 'Inter', sans-serif;
+background-color: #0d1226; /* Dark navy background */
 }
+/* Using solid gold color for strong contrast like the cover art */
+.title-text {
+color: #FFD700; /* Solid Gold */
+font-weight: 900;
+line-height: 1.1; /* Tighter line height for large text */
 }
-}
-}
-/* Custom styles for the logo image placeholder */
-.logo-placeholder {
-width: 100%;
-max-width: 250px;
-height: 250px;
-margin: 0 auto;
-display: flex;
-align-items: center;
-justify-content: center;
-background-color: transparent;
+/* Custom input focus color */
+input:focus {
+border-color: #FFD700 !important;
+box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 }
 </style>
 </head>
-<body class="bg-primary-dark text-text-light font-sans min-h-screen flex flex-col">
+<body class="min-h-screen flex items-center justify-center p-4">
 
-<!-- Header / Navbar (Simple, just the logo/title) -->
-<header class="p-4 sm:p-6 border-b border-accent-gold/20">
-<div class="max-w-7xl mx-auto flex justify-between items-center">
-<h1 class="text-xl sm:text-2xl font-serif font-bold text-accent-gold tracking-widest uppercase">
-INSIDE LOOK
-<span class="text-sm align-super inline-block ml-0.5 opacity-80">™</span>
-</h1>
-</div>
+<!-- Main Content Container -->
+<div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
+
+<!-- Left Section: Cover/Branding (Mimics the Book Cover Visual Identity) -->
+<!-- Items are centered and stacked vertically for that cover art look -->
+<div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
+
+<!-- INSIDE LOOK Header (Large and prominent like the cover) -->
+<header class="text-center w-full">
+<p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
 </header>
 
-<!-- Main Content Area -->
-<main class="flex-grow">
-<!-- Hero Section -->
-<section class="py-12 sm:py-24 text-center px-4">
-<div class="max-w-xl mx-auto">
-<!-- Placeholder for the Coin Logo (Generic, working URL) -->
-<div class="logo-placeholder">
-<img src="https://placehold.co/250x250/060E1B/D4AF37?text=OQE+LLC"
-alt="One Quarter Enterprises LLC Logo Placeholder"
-class="rounded-full border-4 border-accent-gold shadow-gold-glow">
+<!-- Logo - Use your actual uploaded logo here -->
+<div class="h-40 w-40 mx-auto">
+<!--
+*** ACTION REQUIRED: REPLACE THIS URL ***
+You must upload your logo image to a public host (like GitHub or Vercel)
+and replace "YOUR_LOGO_IMAGE_URL_HERE" with the direct link to the image.
+-->
+<img src="YOUR_LOGO_IMAGE_URL_HERE" alt="One Quarter Enterprises LLC Logo" class="w-full h-full object-contain">
 </div>
 
-<h2 class="mt-8 text-4xl sm:text-6xl font-serif font-extrabold leading-tight text-light-gold">
-ONE QUARTER EQUALS A D$LLAR
-</h2>
-<p class="mt-4 text-xl sm:text-2xl font-medium text-text-light/90 tracking-wide">
-The complete **7 Chapters to 7 Figures** Framework for Financial Fortitude.
-</p>
-
-<!-- Call-to-Action Button -->
-<button id="cta-button" onclick="document.getElementById('lead-form').scrollIntoView({ behavior: 'smooth' });"
-class="mt-8 px-8 py-4 bg-accent-gold text-primary-dark font-bold text-lg rounded-xl transition duration-300 ease-in-out transform hover:scale-[1.03] shadow-lg shadow-accent-gold/40 hover:shadow-gold-glow uppercase tracking-wider">
-Get the Free Inside Look Now
-</button>
-</div>
-</section>
-
-<!-- Value Proposition / Framework Overview (Updated Content) -->
-<section class="py-16 sm:py-20 px-4 bg-primary-dark/80 border-t border-b border-accent-gold/10">
-<div class="max-w-4xl mx-auto">
-<h3 class="text-3xl sm:text-4xl font-serif font-bold text-center text-accent-gold mb-12">
-Inside the 7 Chapters: From Quarter to Fortune
-</h3>
-
-<!-- Part I: The Mindset Mandate -->
-<h4 class="text-2xl font-bold text-light-gold border-b border-accent-gold/50 pb-2 mb-6">
-📘 Part I: The Mindset Mandate (Chapters 1-5)
-</h4>
-
-<div class="grid md:grid-cols-2 gap-8 text-left mb-10">
-<!-- Chapter 1 -->
-<div class="p-6 bg-primary-dark rounded-xl border border-accent-gold/30 hover:border-accent-gold transition duration-300">
-<span class="text-accent-gold text-xl font-bold block mb-1">Chapter 1: What Is Money?</span>
-<p class="text-text-light/70">Redefine your financial understanding: Discover why Wisdom is the true Operating System for wealth.</p>
-</div>
-<!-- Chapter 2 -->
-<div class="p-6 bg-primary-dark rounded-xl border border-accent-gold/30 hover:border-accent-gold transition duration-300">
-<span class="text-accent-gold text-xl font-bold block mb-1">Chapter 2: Pitfalls of Poverty (P.O.P.)</span>
-<p class="text-text-light/70">Identify and eliminate the unconscious habits and beliefs that keep you stuck in the cycle of P.O.P.</p>
-</div>
-<!-- Chapter 3 -->
-<div class="p-6 bg-primary-dark rounded-xl border border-accent-gold/30 hover:border-accent-gold transition duration-300">
-<span class="text-accent-gold text-xl font-bold block mb-1">Chapter 3: How 1 Can Equal 4</span>
-<p class="text-text-light/70">Unlock The Power of the Multiplier: Learn the mathematical secret to exponential financial growth.</p>
-</div>
-<!-- Chapter 4 -->
-<div class="p-6 bg-primary-dark rounded-xl border border-accent-gold/30 hover:border-accent-gold transition duration-300">
-<span class="text-accent-gold text-xl font-bold block mb-1">Chapter 4: The Network Marketing Trap</span>
-<p class="text-text-light/70">A critical look at the Failure of Human Duplication and why reliance on others is a flawed scaling model.</p>
-</div>
-<!-- Chapter 5 -->
-<div class="md:col-span-2 p-6 bg-primary-dark rounded-xl border border-accent-gold/30 hover:border-accent-gold transition duration-300 text-center">
-<span class="text-accent-gold text-xl font-bold block mb-1">Chapter 5: Bridging The Gap</span>
-<p class="text-text-light/70">Achieve Expanded Mental Fortitude—the link between your current reality and the 10,000 hours of mastery.</p>
-</div>
-</div>
-
-<!-- Part II & III: Action & Legacy -->
-<h4 class="text-2xl font-bold text-light-gold border-b border-accent-gold/50 pb-2 mb-6 mt-10">
-⚙️ Part II: The Action Blueprint & 🚀 Part III: Legacy
-</h4>
-
-<div class="grid md:grid-cols-2 gap-8 text-left">
-<!-- Chapter 6 -->
-<div class="p-6 bg-primary-dark rounded-xl border border-accent-gold/30 hover:border-accent-gold transition duration-300">
-<span class="text-accent-gold text-xl font-bold block mb-1">Chapter 6: Earning the Seed</span>
-<p class="text-text-light/70">The Foundation of wealth: Tactical strategies for earning your initial seed capital and Defending the Quarter from loss.</p>
-</div>
-<!-- Chapter 7 -->
-<div class="p-6 bg-primary-dark rounded-xl border border-accent-gold/30 hover:border-accent-gold transition duration-300">
-<span class="text-accent-gold text-xl font-bold block mb-1">Chapter 7: The Final Avenues</span>
-<p class="text-text-light/70">The ultimate steps to 7 Figures: Mastering Systemizing your efforts and Compounding your results for long-term legacy.</p>
-</div>
-</div>
-
-<!-- Call to Action Reminder -->
-<div class="text-center mt-12">
-<p class="text-xl font-semibold text-text-light/90">
-Ready to shift your mindset and build your action plan?
-</p>
-<button onclick="document.getElementById('lead-form').scrollIntoView({ behavior: 'smooth' });"
-class="mt-4 px-8 py-3 bg-light-gold text-primary-dark font-bold text-lg rounded-xl transition duration-300 hover:bg-accent-gold uppercase tracking-wider">
-Get Instant Access to the Inside Look
-</button>
-</div>
-</div>
-</section>
-
-<!-- Lead Capture Form Section -->
-<section id="lead-form" class="py-16 sm:py-20 px-4">
-<div class="max-w-lg mx-auto bg-primary-dark/80 p-8 sm:p-10 rounded-2xl shadow-2xl shadow-accent-gold/20 border border-accent-gold/30">
-<h3 class="text-3xl font-serif font-bold text-center text-accent-gold mb-6">
-Get Your Free Inside Look
-</h3>
-<p class="text-center text-text-light/70 mb-8">
-Enter your best email below to receive an exclusive preview of the foundational principles.
-</p>
-
-<form id="subscribe-form" class="space-y-6">
-<div>
-<label for="name" class="sr-only">Your Name</label>
-<input type="text" id="name" name="name" placeholder="Your Name" required
-class="w-full px-5 py-3 rounded-lg bg-primary-dark/50 border border-accent-gold/50 focus:ring-2 focus:ring-accent-gold text-text-light placeholder-text-light/50 transition duration-200">
-</div>
-<div>
-<label for="email" class="sr-only">Your Email</label>
-<input type="email" id="email" name="email" placeholder="Your Best Email" required
-class="w-full px-5 py-3 rounded-lg bg-primary-dark/50 border border-accent-gold/50 focus:ring-2 focus:ring-accent-gold text-text-light placeholder-text-light/50 transition duration-200">
-</div>
-<button type="submit"
-class="w-full px-5 py-3 bg-light-gold text-primary-dark font-bold text-xl rounded-xl transition duration-300 ease-in-out transform hover:bg-accent-gold hover:shadow-lg hover:shadow-accent-gold/60 uppercase tracking-widest">
-Send Me the Preview
-</button>
-</form>
-
-<p id="message-box" class="mt-4 text-center text-sm text-green-400 hidden">
-Success! Check your email for the inside look.
-</p>
-</div>
-</section>
+<!-- Title Block (Emphasized typography) -->
+<main class="text-center">
+<h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
+<span class="block">ONE QUARTER</span>
+<span class="block">EQUALS A D$LLAR</span>
+</h1>
+<!-- Subtitle matching the cover -->
+<p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
+<!-- Framework description moved down for clarity -->
+<p class="text-gray-400 text-sm mt-2">The complete Framework for Financial Fortitude.</p>
 </main>
 
-<!-- Footer -->
-<footer class="p-4 sm:p-6 text-center border-t border-accent-gold/20">
-<div class="max-w-7xl mx-auto">
-<p class="text-sm text-text-light/60">
-&copy; <span id="current-year"></span> One Quarter Enterprises LLC<span class="align-super inline-block ml-0.5 opacity-80 text-xs">™</span>
+<footer class="mt-auto pt-8">
+<p class="text-xs text-gray-500">© 2025 One Quarter Enterprises LLC</p>
+</footer>
+</div>
+
+<!-- Right Section: Form/Call to Action -->
+<div class="md:w-1/2 p-6 md:p-8 bg-gray-50 flex flex-col justify-center">
+<div id="form-content">
+<!-- Text for the "Inside Look" call-to-action -->
+<h2 class="text-2xl font-bold text-gray-900 mb-4">
+Get Your Free Inside Look
+</h2>
+<p class="text-gray-600 mb-6">
+Start converting a Quarter of Effort into a Dollar of Wealth.
+</p>
+
+<!--
+*** MAILERLITE INTEGRATION: ACTION REQUIRED ***
+Replace "YOUR_MAILERLITE_FORM_ACTION_URL" below with the unique action URL
+you get when setting up your embedded form in MailerLite.
+The 'name' attributes (fields[name] and fields[email]) are correct for MailerLite.
+-->
+<form id="lead-form" class="space-y-4"
+action="YOUR_MAILERLITE_FORM_ACTION_URL"
+method="post">
+
+<div>
+<label for="name" class="block text-sm font-medium text-gray-700">Your Name (Optional)</label>
+<input type="text" name="fields[name]" id="name" placeholder="John Doe"
+class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-yellow-500 transition duration-150 ease-in-out"
+autocomplete="name">
+</div>
+
+<div>
+<label for="email" class="block text-sm font-medium text-gray-700">Enter Your Best Email *</label>
+<input type="email" name="fields[email]" id="email" required placeholder="you@example.com"
+class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-yellow-500 focus:border-yellow-500 transition duration-150 ease-in-out"
+autocomplete="email">
+</div>
+
+<button type="submit"
+class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-lg text-lg font-bold text-[#1c213d] bg-yellow-400 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500 transition duration-300 ease-in-out">
+Get My Free Inside Look
+</button>
+
+<p id="form-message" class="text-center text-sm mt-3" style="display: none;"></p>
+
+<p class="text-xs text-center text-gray-500 mt-4">
+We respect your privacy. Your data is 100% secure.
+</p>
+</form>
+</div>
+
+<!-- Thank You Message Placeholder -->
+<div id="thank-you-message" class="hidden text-center p-8 bg-white rounded-lg shadow-xl">
+<h2 class="text-3xl font-bold text-green-600 mb-4">Success!</h2>
+<p class="text-lg text-gray-700 mb-6">
+Thank you for your interest! Your free 'Inside Look' has been sent to your email address.
+</p>
+<p class="text-sm text-gray-500">
+Check your inbox (and spam folder) now!
 </p>
 </div>
-</footer>
+</div>
 
-<!-- JavaScript for Form Submission and Year -->
+</div>
+
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-// Set current year in footer
-document.getElementById('current-year').textContent = new Date().getFullYear();
+const form = document.getElementById('lead-form');
+const formMessage = document.getElementById('form-message');
 
-const form = document.getElementById('subscribe-form');
-const messageBox = document.getElementById('message-box');
-
-form.addEventListener('submit', async (event) => {
-event.preventDefault();
-
-// Disable button and show loading state
-const submitButton = form.querySelector('button[type="submit"]');
-const originalText = submitButton.textContent;
-submitButton.textContent = 'Submitting...';
-submitButton.disabled = true;
-messageBox.classList.add('hidden'); // Hide previous message
-
-const name = document.getElementById('name').value;
-const email = document.getElementById('email').value;
-
-console.log(`Simulating submission: Name: ${name}, Email: ${email}`);
-
-// --- Placeholder API Call Logic ---
-// In a real application, you would make a fetch() call here
-// to your CRM or email service endpoint (e.g., Mailchimp, custom backend).
-
-try {
-// Simulate a network delay (replace with actual fetch)
-await new Promise(resolve => setTimeout(resolve, 1500));
-
-// Simulate successful response
-console.log('Submission successful!');
-
-messageBox.textContent = 'Success! Check your email for the inside look.';
-messageBox.classList.remove('hidden');
-messageBox.classList.add('text-green-400');
-form.reset(); // Clear the form
-
-} catch (error) {
-// Simulate error response
-console.error('Submission failed:', error);
-messageBox.textContent = 'Oops! Something went wrong. Please try again.';
-messageBox.classList.remove('hidden');
-messageBox.classList.remove('text-green-400');
-messageBox.classList.add('text-red-400');
-} finally {
-// Reset button state
-submitButton.textContent = originalText;
-submitButton.disabled = false;
-}
+// This event listener updates the message to show "Submitting..."
+// before the browser posts the data to MailerLite.
+form.addEventListener('submit', () => {
+formMessage.style.display = 'block';
+formMessage.textContent = 'Submitting... Taking you to the next step.';
+formMessage.classList.remove('text-red-500', 'text-green-600');
+formMessage.classList.add('text-gray-500');
 });
 });
 </script>
