--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ONE QUARTER EQUALS A D$LLAR</title>
 <!-- Load Tailwind CSS -->
-<script src="https://cdn.tailwindcss.com"></script>
+<script src="[https://cdn.tailwindcss.com](https://cdn.tailwindcss.com)"></script>
 <style>
 /* Set a custom font family */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+@import url('[https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap](https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap)');
 body {
 font-family: 'Inter', sans-serif;
 background-color: #0d1226; /* Dark navy background */
@@ -32,25 +32,26 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 <div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
 
 <!-- Left Section: Cover/Branding (Mimics the Book Cover Visual Identity) -->
-<!-- Items are centered and stacked vertically for that cover art look -->
 <div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
 
-<!-- INSIDE LOOK Header (Large and prominent like the cover) -->
+<!-- INSIDE LOOK Header -->
 <header class="text-center w-full">
 <p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
 </header>
 
-<!-- Logo - Use your actual uploaded logo here -->
+<!-- Logo Section - CLEANED AND CORRECTED -->
 <div class="h-40 w-40 mx-auto">
 <!--
-*** ACTION REQUIRED: REPLACE THIS URL ***
-You must upload your logo image to a public host (like GitHub or Vercel)
-and replace "YOUR_LOGO_IMAGE_URL_HERE" with the direct link to the image.
+*** 1. ACTION REQUIRED: REPLACE THIS URL ***
+Insert the direct link to your publicly hosted OQE LLC logo here.
+(The current link is a placeholder image that will display "LOGO").
 -->
-<img src="YOUR_LOGO_IMAGE_URL_HERE" alt="One Quarter Enterprises LLC Logo" class="w-full h-full object-contain">
+<img src="[https://placehold.co/160x160/FFD700/0D1226?text=LOGO](https://placehold.co/160x160/FFD700/0D1226?text=LOGO)"
+alt="OQE LLC Logo Placeholder"
+class="w-full h-full object-contain rounded-full shadow-lg p-2 bg-black">
 </div>
 
-<!-- Title Block (Emphasized typography) -->
+<!-- Title Block -->
 <main class="text-center">
 <h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
 <span class="block">ONE QUARTER</span>
@@ -58,7 +59,7 @@ and replace "YOUR_LOGO_IMAGE_URL_HERE" with the direct link to the image.
 </h1>
 <!-- Subtitle matching the cover -->
 <p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
-<!-- Framework description moved down for clarity -->
+<!-- Framework description -->
 <p class="text-gray-400 text-sm mt-2">The complete Framework for Financial Fortitude.</p>
 </main>
 
@@ -78,13 +79,13 @@ Get Your Free Inside Look
 Start converting a Quarter of Effort into a Dollar of Wealth.
 </p>
 
-<!--
-*** MAILERLITE INTEGRATION: ACTION REQUIRED ***
-Replace "YOUR_MAILERLITE_FORM_ACTION_URL" below with the unique action URL
-you get when setting up your embedded form in MailerLite.
-The 'name' attributes (fields[name] and fields[email]) are correct for MailerLite.
--->
+<!-- MAILERLITE FORM INTEGRATION -->
 <form id="lead-form" class="space-y-4"
+
+<!--
+*** 2. ACTION REQUIRED: REPLACE THIS URL ***
+Insert the unique action URL provided by MailerLite for your form.
+-->
 action="YOUR_MAILERLITE_FORM_ACTION_URL"
 method="post">
 
@@ -134,8 +135,6 @@ document.addEventListener('DOMContentLoaded', () => {
 const form = document.getElementById('lead-form');
 const formMessage = document.getElementById('form-message');
 
-// This event listener updates the message to show "Submitting..."
-// before the browser posts the data to MailerLite.
 form.addEventListener('submit', () => {
 formMessage.style.display = 'block';
 formMessage.textContent = 'Submitting... Taking you to the next step.';
