--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ONE QUARTER EQUALS A D$LLAR</title>
-<!-- Load Tailwind CSS -->
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 /* Set a custom font family */
@@ -28,40 +27,27 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
 
-<!-- Main Content Container -->
 <div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
 
-<!-- Left Section: Cover/Branding (Mimics the Book Cover Visual Identity) -->
 <div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
 
-<!-- INSIDE LOOK Header -->
 <header class="text-center w-full">
 <p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
 </header>
 
-<!-- Logo Section - NOW USING THE ACTUAL GOLD COIN IMAGE -->
 <div class="h-40 w-40 mx-auto bg-black rounded-full p-2">
-<!--
-*** 1. ACTION REQUIRED: VERIFY LOGO URL ***
-I've attempted to use a likely public URL for your gold coin logo.
-If this specific URL fails, replace it with the direct public link
-where your image (image.png in the uploads) is hosted.
--->
-<img src="https://onequarterdollar.com/oqe-gold-coin-logo.png"
-alt="One Quarter Enterprises LLC Gold Coin Logo"
+<img src="https://scontent.fmkc1-1.fna.fbcdn.net/v/t39.30808-6/588968506_122100362457133844_4061541076633413118_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=ugSb6IfWcyUQ7kNvwFssdhS&_nc_oc=AdnLyGgDAoPCooqq8iKNMD4LsfXMywqUPdJ2XrU5xkEqa3M8jJhJ_BRS5lqyguYK8G4&_nc_zt=23&_nc_ht=scontent.fmkc1-1.fna&_nc_gid=BIVaDawrsTsiiMH55eGcyQ&oh=00_Afh0LGXrhzE3i7zs_i6IuDmet2K1aO7raBD-X8Pnfas5ZQ&oe=692E139B"
+alt="One Quarter Equals A D$llar Blueprint Cover"
 onerror="this.src='https://placehold.co/160x160/FFD700/0D1226?text=OQE%20LLC'"
 class="w-full h-full object-contain rounded-full">
 </div>
 
-<!-- Title Block -->
 <main class="text-center">
 <h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
 <span class="block">ONE QUARTER</span>
 <span class="block">EQUALS A D$LLAR</span>
 </h1>
-<!-- Subtitle matching the cover -->
 <p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
-<!-- Framework description -->
 <p class="text-gray-400 text-sm mt-2">The complete Framework for Financial Fortitude.</p>
 </main>
 
@@ -70,10 +56,8 @@ class="w-full h-full object-contain rounded-full">
 </footer>
 </div>
 
-<!-- Right Section: Form/Call to Action -->
 <div class="md:w-1/2 p-6 md:p-8 bg-gray-50 flex flex-col justify-center">
 <div id="form-content">
-<!-- Text for the "Inside Look" call-to-action -->
 <h2 class="text-2xl font-bold text-gray-900 mb-4">
 Get Your Free Inside Look
 </h2>
@@ -81,13 +65,8 @@ Get Your Free Inside Look
 Start converting a Quarter of Effort into a Dollar of Wealth.
 </p>
 
-<!-- MAILERLITE FORM INTEGRATION -->
 <form id="lead-form" class="space-y-4"
 
-<!--
-*** 2. ACTION REQUIRED: REPLACE THIS URL ***
-Insert the unique action URL provided by MailerLite for your form.
--->
 action="YOUR_MAILERLITE_FORM_ACTION_URL"
 method="post">
 
@@ -118,7 +97,6 @@ We respect your privacy. Your data is 100% secure.
 </form>
 </div>
 
-<!-- Thank You Message Placeholder -->
 <div id="thank-you-message" class="hidden text-center p-8 bg-white rounded-lg shadow-xl">
 <h2 class="text-3xl font-bold text-green-600 mb-4">Success!</h2>
 <p class="text-lg text-gray-700 mb-6">
