--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@ input:focus {
 border-color: #FFD700 !important;
 box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 }
+/* New style to ensure the image displays as a rectangle */
+.book-cover-container {
+    height: auto; /* Allow height to adjust */
+    width: 256px; /* A fixed width (64 units in Tailwind) */
+    max-width: 100%;
+}
 </style>
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
@@ -35,11 +41,11 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 <p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
 </header>
 
-<div class="h-40 w-40 mx-auto bg-black rounded-full p-2">
-<img src="https://scontent.fmkc1-1.fna.fbcdn.net/v/t39.30808-6/588968506_122100362457133844_4061541076633413118_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=ugSb6IfWcyUQ7kNvwFssdhS&_nc_oc=AdnLyGgDAoPCooqq8iKNMD4LsfXMywqUPdJ2XrU5xkEqa3M8jJhJ_BRS5lqyguYK8G4&_nc_zt=23&_nc_ht=scontent.fmkc1-1.fna&_nc_gid=BIVaDawrsTsiiMH55eGcyQ&oh=00_Afh0LGXrhzE3i7zs_i6IuDmet2K1aO7raBD-X8Pnfas5ZQ&oe=692E139B"
-alt="One Quarter Equals A D$llar Blueprint Cover"
-onerror="this.src='https://placehold.co/160x160/FFD700/0D1226?text=OQE%20LLC'"
-class="w-full h-full object-contain rounded-full">
+<div class="book-cover-container mx-auto p-2">
+    <img src="https://scontent.fmkc1-1.fna.fbcdn.net/v/t39.30808-6/588968506_122100362457133844_4061541076633413118_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=ugSb6IfWcyUQ7kNvwFssdhS&_nc_oc=AdnLyGgDAoPCooqq8iKNMD4LsfXMywqUPdJ2XrU5xkEqa3M8jJhJ_BRS5lqyguYK8G4&_nc_zt=23&_nc_ht=scontent.fmkc1-1.fna&_nc_gid=BIVaDawrsTsiiMH55eGcyQ&oh=00_Afh0LGXrhzE3i7zs_i6IuDmet2K1aO7raBD-X8Pnfas5ZQ&oe=692E139B"
+    alt="One Quarter Equals A D$llar Blueprint Cover"
+    onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+UPLOAD+TO+CMS'"
+    class="w-full h-auto object-contain rounded-lg shadow-xl">
 </div>
 
 <main class="text-center">
