--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ input:focus {
 border-color: #FFD700 !important;
 box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 }
-/* New style to ensure the image displays as a rectangle */
+/* Style to ensure the image displays as a rectangle */
 .book-cover-container {
     height: auto; /* Allow height to adjust */
     width: 256px; /* A fixed width (64 units in Tailwind) */
@@ -42,9 +42,9 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 </header>
 
 <div class="book-cover-container mx-auto p-2">
-    <img src="https://scontent.fmkc1-1.fna.fbcdn.net/v/t39.30808-6/588968506_122100362457133844_4061541076633413118_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=109&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=ugSb6IfWcyUQ7kNvwFssdhS&_nc_oc=AdnLyGgDAoPCooqq8iKNMD4LsfXMywqUPdJ2XrU5xkEqa3M8jJhJ_BRS5lqyguYK8G4&_nc_zt=23&_nc_ht=scontent.fmkc1-1.fna&_nc_gid=BIVaDawrsTsiiMH55eGcyQ&oh=00_Afh0LGXrhzE3i7zs_i6IuDmet2K1aO7raBD-X8Pnfas5ZQ&oe=692E139B"
+    <img src="https://i.imgur.com/m8tOSRX.jpg"
     alt="One Quarter Equals A D$llar Blueprint Cover"
-    onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+UPLOAD+TO+CMS'"
+    onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
     class="w-full h-auto object-contain rounded-lg shadow-xl">
 </div>
 
