--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 </header>
 
 <div class="book-cover-container mx-auto p-2">
-    <img src="https://i.imgur.com/m8tOSRX.jpg"
+    <img src="https://i.imgur.com/EwWFtC6.jpg"
     alt="One Quarter Equals A D$llar Blueprint Cover"
     onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
     class="w-full h-auto object-contain rounded-lg shadow-xl">
@@ -98,38 +98,4 @@ Get My Free Inside Look
 <p id="form-message" class="text-center text-sm mt-3" style="display: none;"></p>
 
 <p class="text-xs text-center text-gray-500 mt-4">
-We respect your privacy. Your data is 100% secure.
-</p>
-</form>
-</div>
-
-<div id="thank-you-message" class="hidden text-center p-8 bg-white rounded-lg shadow-xl">
-<h2 class="text-3xl font-bold text-green-600 mb-4">Success!</h2>
-<p class="text-lg text-gray-700 mb-6">
-Thank you for your interest! Your free 'Inside Look' has been sent to your email address.
-</p>
-<p class="text-sm text-gray-500">
-Check your inbox (and spam folder) now!
-</p>
-</div>
-</div>
-
-</div>
-
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-const form = document.getElementById('lead-form');
-const formMessage = document.getElementById('form-message');
-
-form.addEventListener('submit', () => {
-// This is a simple client-side message, the actual submission logic
-// is handled by the MailerLite 'action' URL in the form tag.
-formMessage.style.display = 'block';
-formMessage.textContent = 'Submitting... Taking you to the next step.';
-formMessage.classList.remove('text-red-500', 'text-green-600');
-formMessage.classList.add('text-gray-500');
-});
-});
-</script>
-</body>
-</html>
+We respect your privacy. Your data is 100% secure
