--- a/index.html
+++ b/index.html
@@ -1,36 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ONE QUARTER EQUALS A D$LLAR</title>
-<script src="https://cdn.tailwindcss.com"></script>
-<style>
-/* Set a custom font family */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
-body {
-font-family: 'Inter', sans-serif;
-background-color: #0d1226; /* Dark navy background for the whole page */
-}
-/* Using solid gold color for strong contrast like the cover art */
-.title-text {
-color: #FFD700; /* Solid Gold */
-font-weight: 900;
-line-height: 1.1; /* Tighter line height for large text */
-}
-/* Custom input focus color */
-input:focus {
-border-color: #FFD700 !important;
-box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
-}
-/* Style to ensure the image displays as a rectangle */
-.book-cover-container {
-    height: auto; /* Allow height to adjust */
-    width: 256px; /* A fixed width (64 units in Tailwind) */
-    max-width: 100%;
-}
-</style>
-</head>
 <body class="min-h-screen flex items-center justify-center p-4">
 
 <div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
@@ -54,48 +21,10 @@ box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
 <span class="block">EQUALS A D$LLAR</span>
 </h1>
 <p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
-<p class="text-gray-400 text-sm mt-2">The complete Framework for Financial Fortitude.</p>
+<p class="text-gray-400 text-sm mt-2">The #1 Blueprint To Financial Freedom</p>
 </main>
 
 <footer class="mt-auto pt-8">
 <p class="text-xs text-gray-500">© 2025 One Quarter Enterprises LLC</p>
 </footer>
 </div>
-
-<div class="md:w-1/2 p-6 md:p-8 bg-gray-50 flex flex-col justify-center">
-<div id="form-content">
-<h2 class="text-2xl font-bold text-gray-900 mb-4">
-Get Your Free Inside Look
-</h2>
-<p class="text-gray-600 mb-6">
-Start converting a Quarter of Effort into a Dollar of Wealth.
-</p>
-
-<form id="lead-form" class="space-y-4"
-
-action="YOUR_MAILERLITE_FORM_ACTION_URL"
-method="post">
-
-<div>
-<label for="name" class="block text-sm font-medium text-gray-700">Your Name (Optional)</label>
-<input type="text" name="fields[name]" id="name" placeholder="John Doe"
-class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-yellow-500 transition duration-150 ease-in-out"
-autocomplete="name">
-</div>
-
-<div>
-<label for="email" class="block text-sm font-medium text-gray-700">Enter Your Best Email *</label>
-<input type="email" name="fields[email]" id="email" required placeholder="you@example.com"
-class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-yellow-500 focus:border-yellow-500 transition duration-150 ease-in-out"
-autocomplete="email">
-</div>
-
-<button type="submit"
-class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-lg text-lg font-bold text-[#1c213d] bg-yellow-400 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500 transition duration-300 ease-in-out">
-Get My Free Inside Look
-</button>
-
-<p id="form-message" class="text-center text-sm mt-3" style="display: none;"></p>
-
-<p class="text-xs text-center text-gray-500 mt-4">
-We respect your privacy. Your data is 100% secure
