--- a/index.html
+++ b/index.html
@@ -1,30 +1,130 @@
-<body class="min-h-screen flex items-center justify-center p-4">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ONE QUARTER EQUALS A D$LLAR</title>
+</head>
+<body>
 
-<div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
+<div id="tailwind-isolated-lead-magnet"></div>
 
-<div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+    // 1. Get the container element where the Shadow DOM will attach
+    const container = document.getElementById('tailwind-isolated-lead-magnet');
+    
+    // Check for Shadow DOM support and attach it
+    if (container.attachShadow) {
+        const shadowRoot = container.attachShadow({ mode: 'open' });
 
-<header class="text-center w-full">
-<p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
-</header>
+        // 2. The entire HTML structure, including internal <style> and Tailwind CDN
+        const htmlContent = `
+        <style>
+        /* Load Tailwind CSS from CDN *only* for this component */
+        @import url('https://cdn.tailwindcss.com');
+        /* Set a custom font family */
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
+        
+        .custom-body {
+            font-family: 'Inter', sans-serif;
+            background-color: #0d1226;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 1rem;
+        }
+        .title-text {
+            color: #FFD700;
+            font-weight: 900;
+            line-height: 1.1;
+        }
+        input:focus {
+            border-color: #FFD700 !important;
+            box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5) !important;
+        }
+        .book-cover-container {
+            height: auto;
+            width: 256px;
+            max-width: 100%;
+        }
+        </style>
 
-<div class="book-cover-container mx-auto p-2">
-    <img src="https://i.imgur.com/EwWFtC6.jpg"
-    alt="One Quarter Equals A D$llar Blueprint Cover"
-    onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR:+CHECK+IMGUR+LINK'"
-    class="w-full h-auto object-contain rounded-lg shadow-xl">
-</div>
+        <div class="custom-body">
+            <div class="max-w-4xl w-full bg-[#1c213d] shadow-2xl rounded-xl overflow-hidden md:flex">
 
-<main class="text-center">
-<h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
-<span class="block">ONE QUARTER</span>
-<span class="block">EQUALS A D$LLAR</span>
-</h1>
-<p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
-<p class="text-gray-400 text-sm mt-2">The #1 Blueprint To Financial Freedom</p>
-</main>
+                <div class="md:w-1/2 p-6 md:p-10 flex flex-col justify-center items-center bg-[#0d1226] text-white space-y-8">
 
-<footer class="mt-auto pt-8">
-<p class="text-xs text-gray-500">© 2025 One Quarter Enterprises LLC</p>
-</footer>
-</div>
+                    <header class="text-center w-full">
+                        <p class="text-3xl tracking-widest uppercase font-bold text-yellow-400 mb-0">INSIDE LOOK</p>
+                    </header>
+
+                    <div class="book-cover-container mx-auto p-2">
+                        <img src="https://i.imgur.com/EwWFtC6.jpg"
+                        alt="One Quarter Equals A D$llar Blueprint Cover"
+                        onerror="this.src='https://placehold.co/256x350/FFD700/0D1226?text=IMAGE+ERROR'"
+                        class="w-full h-auto object-contain rounded-lg shadow-xl">
+                    </div>
+
+                    <main class="text-center">
+                        <h1 class="text-4xl sm:text-5xl lg:text-6xl title-text font-extrabold leading-none mb-4 uppercase">
+                            <span class="block">ONE QUARTER</span>
+                            <span class="block">EQUALS A D$LLAR</span>
+                        </h1>
+                        <p class="text-yellow-400 text-lg font-bold">7 Chapters to 7 Figures</p>
+                        <p class="text-gray-400 text-sm mt-2">The #1 Blueprint To Financial Freedom</p>
+                    </main>
+
+                    <footer class="mt-auto pt-8">
+                        <p class="text-xs text-gray-500">© 2025 One Quarter Enterprises LLC</p>
+                    </footer>
+                </div>
+
+                <div class="md:w-1/2 p-6 md:p-8 bg-gray-50 flex flex-col justify-center">
+                    <div id="form-content">
+                        <h2 class="text-2xl font-bold text-gray-900 mb-4">
+                            Get Your Free Inside Look
+                        </h2>
+                        <p class="text-gray-600 mb-6">
+                            Start converting a Quarter of Effort into a Dollar of Wealth.
+                        </p>
+
+                        <form id="lead-form" class="space-y-4"
+                        action="YOUR_MAILERLITE_FORM_ACTION_URL"
+                        method="post">
+
+                        <div>
+                            <label for="name" class="block text-sm font-medium text-gray-700">Your Name (Optional)</label>
+                            <input type="text" name="fields[name]" id="name" placeholder="John Doe"
+                            class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-yellow-500 transition duration-150 ease-in-out"
+                            autocomplete="name">
+                        </div>
+
+                        <div>
+                            <label for="email" class="block text-sm font-medium text-gray-700">Enter Your Best Email *</label>
+                            <input type="email" name="fields[email]" id="email" required placeholder="you@example.com"
+                            class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-yellow-500 focus:border-yellow-500 transition duration-150 ease-in-out"
+                            autocomplete="email">
+                        </div>
+
+                        <button type="submit"
+                        class="w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-lg text-lg font-bold text-[#1c213d] bg-yellow-400 hover:bg-yellow-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500 transition duration-300 ease-in-out">
+                            Get My Free Inside Look
+                        </button>
+
+                        <p id="form-message" class="text-center text-sm mt-3" style="display: none;"></p>
+
+                        <p class="text-xs text-center text-gray-500 mt-4">
+                            We respect your privacy. Your data is 100% secure.
+                        </p>
+                        </form>
+                    </div>
+
+                    <div id="thank-you-message" class="hidden text-center p-8 bg-white rounded-lg shadow-xl">
+                        <h2 class="text-3xl font-bold text-green-600 mb-4">Success!</h2>
+                        <p class="text-lg text-gray-700 mb-6">
+                            Thank you for your interest! Your free 'Inside Look' has been sent to your email address.
+                        </p>
+                        <p class="text-sm text-gray-500">
+                            Check your inbox (and spam folder
