--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@ outline: none;
 </footer>
 </div>
 
-<div class="md:w-1/2 p-6 md:p-8 bg-gray-50 flex flex-col justify-center">
+<div class="md:w-1/2 p-6 md:p-8 bg-[#1c213d] flex flex-col justify-center text-white">
 <div id="form-content">
-<h2 class
+<h2 class="text-2xl font-bold text-white mb-4">
+Get Your Free Inside Look
+</h2>
+<p class="text-gray-300 mb-6">
+Start converting a Quarter of Effort into a Dollar of Wealth.
+</p>
+
+<form id="lead-form" class="space-y-4"
+action="YOUR_MAILERLITE_FORM_ACTION_URL"
+method="post">
+
+<div style="margin-bottom: 1rem;">
+<label for="name" class="block text-sm font-medium text-gray-300">Your Name (Optional)</
