--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Start converting a Quarter of Effort into a Dollar of Wealth.
 </p>
 
 <form id="lead-form" class="space-y-4"
-action="YOUR_MAILERLITE_FORM_ACTION_URL"
+action="bridge.html"
 method="post">
 
 <div style="margin-bottom: 1rem;">
